tests/src/frontend/typechecking/invalid/frozen_memo_met_2.sk
mutable class Foo(mutable v: Foo) {
  memoized mutable fun no(): void {
    void
  }
}
